--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
     <section>
         <div>
-            <img src="images/first.png" alt="first">
-            <img src="images/second.png" alt="second">
-            <img src="images/third.png" alt="third">
+            <img src="first.png" alt="first">
+            <img src="second.png" alt="second">
+            <img src="third.png" alt="third">
         </div>
         <div class="fourth">
-            <img src="images/fourth.png" alt="fourth">
+            <img src="fourth.png" alt="fourth">
         </div>
         <a href="#">
         <p>| სხვა პროექტები</p>
